--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,9 @@
-spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url= jdbc:mysql://localhost:3306/javatechie
-spring.datasource.username=root
-spring.datasource.password=!Sql19951995
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url = jdbc:mysql://localhost:3306/javatechie
+spring.datasource.username = root
+spring.datasource.password = !Sql19951995
+spring.jpa.show-sql = true
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+server.port=9191
 
-spring.jpa.show-sql=true
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySql5Dialect
